# llm_chat_app

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  SECURITY.md  main.py  pyproject.toml  test_exa_search.py  test_ollama.py
.github/workflows/: ci-cd.yml
app/: main.py
app/agents/: langgraph_agent.py
app/api/: chat.py  routes.py
app/core/: config.py  dependencies.py  exceptions.py  tracing.py
app/middleware/: __init__.py  cors.py  error_handler.py  logging.py  security.py
app/models/: base.py  chat.py
app/repositories/: __init__.py  base.py  chat.py
app/schemas/: chat.py
app/services/: llm_service.py  search_service.py
app/static/css/: styles.css
app/static/js/: chat.js
app/tasks/: __init__.py
app/templates/: index.html
app/utils/: client_manager.py  thread_demo.py
docs/: EXA_SEARCH_SETUP.md  OLLAMA_SETUP.md  http-request-journey-deep-dive.md
infra/pulumi/: Pulumi.yaml  __main__.py  requirements.txt
k8s/base/: deployment.yaml  service.yaml
k8s/overlays/dev/: deployment-patch.yaml  kustomization.yaml
k8s/overlays/production/: deployment-patch.yaml  kustomization.yaml
pydantic/: __init__.py
tests/integration/: test_api.py
tests/unit/: test_example.py  test_llm_service.py
