[project]
name = "llm-chat-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.11",
    "httpx>=0.28.1",
    "openai>=1.66.3",
    "anthropic>=0.25.0",
    "google-generativeai>=0.5.4",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "langchain>=0.3.26",
    "langgraph>=0.5.1"
]

[project.optional-dependencies]
dev = [
    "flake8>=7.1.2",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "ruff>=0.11.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --cov=. --cov-report=term-missing"
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
    "slow: marks tests as slow running",
]
